src/components/TaskCard/TaskCard.module.css
.card {
  box-sizing: border-box;
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  width: 100%;
  padding: 0.5rem;
  border: 2px solid var(--text-color);
  border-radius: 0.5rem;
  box-shadow: 0 4px 30px var(--bg-primary);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  cursor: pointer;
}
.tagContainer {
  position: absolute;
  width: fit-content;
  max-width: 4rem;
  height: 0.75rem;
  border-bottom-left-radius: 0.5rem;
  padding: 0.25rem;
  background: var(--text-color);
  top: 0;
  right: 0;
  overflow: hidden;
}
.tagContainer > h5 {
  font-size: 0.8rem;
  text-transform: uppercase;
  color: var(--bg-primary);
}
.header {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  width: 80%;
}
.header > h5 {
  font-size: 0.75rem;
}
.card > p {
  max-height: 100px;
  overflow: scroll;
}
.card > p::-webkit-scrollbar {
  display: none;
}
.lower {
  display: flex;
  align-items: center;
  text-transform: capitalize;
}
.lower > p > span {
  font-weight: 800;
}
.buttons {
  margin-left: auto;
  min-width: 60px;
}
.buttons > button {
  background: none;
  border: none;
  cursor: pointer;
}
.cancelButton {
  color: var(--cancelled);
}
.rollbackButton {
  color: var(--backlog);
}
.updateButton {
  color: var(--completed);
}
.cancel {
  margin-left: auto;
  background: none;
  border: none;
  cursor: pointer;
  color: var(--backlog);
}

